# python3-logger

./: README.md  pyproject.toml
clagiordano/python3_logger/: AbstractLogger.py  CLILogger.py  LogLevels.py
tests/: test_CLILogger.py  test_LogLevels.py
